--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -static")
 
 
 find_package(FreeType REQUIRED)
-include_directories(${FreeType_INCLUDE_DIRS})
+include_directories(${FreeType_INCLUDE_DIR})
 
 
 set(SOURCE_FILES
